Fri Feb 11 19:18:52 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/codegen/model/Application.h:
        * tools/modeling/codegen/model/Application.cpp:
        * tools/modeling/tests/Deep/Down/Reference/publisher.cpp:
        * tools/modeling/tests/Deep/Down/Reference/subscriber.cpp:

          Fixed WCHAR bugs.

        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
        * java/ant/build.xml:
        * tools/modeling/build.xml:
        * tools/modeling/codegen/model/Entities.cpp:
        * tools/modeling/codegen/model/NullSubscriberListener.h:
        * tools/modeling/codegen/model/NullSubscriberListener.cpp:
        * tools/modeling/codegen/model/NullWriterListener.h:
        * tools/modeling/codegen/model/NullWriterListener.cpp:
        * tools/modeling/codegen/model/Service_T.cpp:
        * tools/modeling/codegen/model/Sync.cpp:
        * tools/modeling/tests/CfTopic/publisher.cpp:
        * tools/modeling/tests/DataLibRef/publisher.cpp:
        * tools/modeling/tests/DomainZero/publisher.cpp:
        * tools/modeling/tests/EmptyLibs/publisher.cpp:
        * tools/modeling/tests/Exchange/publisher.cpp:
        * tools/modeling/tests/Exchange/subscriber.cpp:
        * tools/modeling/tests/ExternalPolicies/publisher.cpp:
        * tools/modeling/tests/Messenger/publisher.cpp:
        * tools/modeling/tests/MessengerDpQos/publisher.cpp:
        * tools/modeling/tests/MessengerGlobalNs/publisher.cpp:
        * tools/modeling/tests/MessengerMC/publisher.cpp:
        * tools/modeling/tests/MessengerMC/subscriber.cpp:
        * tools/modeling/tests/MessengerMulti/publisher.cpp:
        * tools/modeling/tests/MessengerPubQos/publisher.cpp:
        * tools/modeling/tests/MessengerSimpleTypes/publisher.cpp:
        * tools/modeling/tests/MessengerWriterQos/publisher.cpp:
        * tools/modeling/tests/MultiDCPS/publisher.cpp:
        * tools/modeling/tests/MultiInstance/publisher.cpp: