@@ -1,3 +1,12 @@
+Fri Feb 11 20:22:38 UTC 2011  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/DCPS/transport/framework/DataLinkWatchdog_T.h:
+        * dds/DCPS/transport/framework/QueueTaskBase_T.h:
+        * dds/DCPS/transport/simpleTCP/SimpleTcpConnection.cpp:
+        * dds/DCPS/transport/udp/UdpDataLink.cpp:
+
+          ACE logging's %p formatter requires an ACE_TCHAR* argument.
+
 Fri Feb 11 19:18:52 UTC 2011  Adam Mitz  <mitza@ociweb.com>
 
         * tools/modeling/codegen/model/Application.h:
